--- a/JavaEE/CarShop/src/main/webapp/WEB-INF/web.xml
+++ b/JavaEE/CarShop/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,27 @@
         <servlet-name>MenuServlet</servlet-name>
         <servlet-class>com.shop.carshop.servlets.MenuServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SingleCarServlet</servlet-name>
+        <servlet-class>com.shop.carshop.servlets.SingleCarServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DeleteServlet</servlet-name>
+        <servlet-class>com.shop.carshop.servlets.DeleteServlet</servlet-class>
+    </servlet>
+
     
     <servlet-mapping>
         <servlet-name>MenuServlet</servlet-name>
         <url-pattern>/car-shop</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SingleCarServlet</servlet-name>
+        <url-pattern>/car-shop/car/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteServlet</servlet-name>
+        <url-pattern>/car-shop/delete/car/*</url-pattern>
     </servlet-mapping>
     
 </web-app>
