--- a/JavaEE/CarShop/pom.xml
+++ b/JavaEE/CarShop/pom.xml
@@ -81,6 +81,17 @@
             <version>4.0.3</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>2.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.3.5</version>
+        </dependency>
     </dependencies>
 
     <build>
