--- a/JavaEE/CarShop/src/main/webapp/WEB-INF/web.xml
+++ b/JavaEE/CarShop/src/main/webapp/WEB-INF/web.xml
@@ -13,6 +13,13 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <resource-ref>
+        <description>My Database</description>
+        <res-ref-name>jdbc/javaEE</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+
     <servlet>
         <servlet-name>MenuServlet</servlet-name>
         <servlet-class>com.shop.carshop.servlets.MenuServlet</servlet-class>
